5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1585_1015.log
== SUBMITION (2019-03-25 12:44:00) 
-- CODE:
a=int(input("numero a: "))
b=int(input("numero b: "))
c=int(input("numero c: "))
print(min(a,b,c))

print(max(a,b,c))

-- EXECUTION TIME:
0.190997
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:44:04) 
-- CODE:
a=int(input("numero a: "))
b=int(input("numero b: "))
c=int(input("numero c: "))
print(min(a,b,c))

print(max(a,b,c))

-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:47:30) 
-- CODE:
a=int(input("numero a: "))
b=int(input("numero b: "))
c=int(input("numero c: "))
print(min(a,b,c))
print((a+b+c)-(min(a,b,c)+(max(a,b,c))

print(max(a,b,c))

-- ERROR:
File "XXXX", line 7
    print(max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:47:57) 
-- CODE:
a=int(input("numero a: "))
b=int(input("numero b: "))
c=int(input("numero c: "))
print(min(a,b,c))
print((a+b+c)-(min(a,b,c))+(max(a,b,c))

print(max(a,b,c))

-- ERROR:
File "XXXX", line 7
    print(max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:49:20) 
-- CODE:
a=int(input("numero a: "))
b=int(input("numero b: "))
c=int(input("numero c: "))
print(min(a,b,c))
print((a+b+c)-(min(a,b,c)+max(a,b,c))
print(max(a,b,c))

-- ERROR:
File "XXXX", line 6
    print(max(a,b,c))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:52:55) 
-- CODE:
a=int(input("numero a: "))
b=int(input("numero b: "))
c=int(input("numero c: "))
minimo=min(a,b,c)
maximo=max(a,b,c)
print(minimo)
print((a+b+c)-(minimo+maximo))
print(maximo)

-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:53:21) 
-- CODE:
a=int(input("numero a: "))
b=int(input("numero b: "))
c=int(input("numero c: "))
minimo=min(a,b,c)
maximo=max(a,b,c)
print(minimo)
print((a+b+c)-(minimo+maximo))
print(maximo)

-- EXECUTION TIME:
0.128859
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
